--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -21,7 +21,6 @@ body {
     flex: 1 1 100%;
     align-items: stretch;
     justify-content: space-between;
-    /*box-shadow: 0 0 20px 6px #E2D36B;*/
 }
 @media (max-width: 980px) {
     .box-form {
@@ -50,11 +49,12 @@ body {
     box-sizing: border-box;
 }
 .box-form .left .overlay h1 {
-    font-size: 10vmax;
+    font-size: 9vmax;
     line-height: 1;
     font-weight: 900;
     margin-top: 40px;
     margin-bottom: 20px;
+    padding: 20px;
 }
 .box-form .left .overlay span p {
     margin-top: 30px;
