--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     background: #5AA7A7;
-    background: linear-gradient(135deg,#96D7C6 30%, #BAC94A 120%);
+    background: linear-gradient(135deg, #96D7C6 30%, #BAC94A 120%);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -9,9 +9,9 @@ body {
 }
 
 .box-form {
-   position: absolute;
+    position: absolute;
     left: 50%;
-    top:50%;
+    top: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
     background: #FFFFFF;
@@ -22,6 +22,8 @@ body {
     align-items: stretch;
     justify-content: space-between;
 }
+
+
 @media (max-width: 980px) {
     .box-form {
         flex-flow: wrap;
@@ -30,9 +32,11 @@ body {
         align-items: center;
     }
 }
+
 .box-form div {
     height: auto;
 }
+
 .box-form .left {
     color: #FFFFFF;
     background-size: cover;
@@ -40,6 +44,7 @@ body {
     background-image: url("http://www.wallanmedical.com.au/wp-content/uploads/2021/11/blockchain-healthcare.jpg");
     overflow: hidden;
 }
+
 .box-form .left .overlay {
     padding: 30px;
     width: 100%;
@@ -48,6 +53,7 @@ body {
     overflow: hidden;
     box-sizing: border-box;
 }
+
 .box-form .left .overlay h1 {
     font-size: 9vmax;
     line-height: 1;
@@ -56,10 +62,12 @@ body {
     margin-bottom: 20px;
     padding: 20px;
 }
+
 .box-form .left .overlay span p {
     margin-top: 30px;
     font-weight: 900;
 }
+
 .box-form .left .overlay span a {
     background: #5effd7;
     color: #FFFFFF;
@@ -69,30 +77,37 @@ body {
     display: inline-block;
     box-shadow: 0 3px 6px 1px #042d4657;
 }
+
 .box-form .left .overlay span a:last-child {
     background: #1dcaff;
     margin-left: 30px;
 }
+
 .box-form .right {
-    padding: 130px;
+    padding: 110px;
     overflow: hidden;
 }
+
 @media (max-width: 980px) {
     .box-form .right {
         width: 100%;
     }
 }
+
 .box-form .right h5 {
     font-size: 6vmax;
     line-height: 0;
 }
+
 .box-form .right p {
     font-size: 14px;
     color: #B0B3B9;
 }
+
 .box-form .right .inputs {
     overflow: hidden;
 }
+
 .box-form .right input {
     width: 100%;
     padding: 10px;
@@ -142,9 +157,9 @@ label:hover::before {
     background: #00dea7;
 }
 
-.error{
+.error {
     font-family: FontAwesome;
-    color:dimgray;
+    color: dimgray;
     font-size: 15px;
     padding-left: 12px;
 }
@@ -163,4 +178,77 @@ label span.text-checkbox {
 
 label input[type="checkbox"] {
     display: none;
+}
+
+.box-form-add-patient {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /*width: 80%;*/
+    width:fit-content;
+    block-size: fit-content;
+    background: #FFFFFF;
+    padding: 50px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: block;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+.box-form-add-patient div {
+    height: auto;
+}
+
+.box-form-add-patient .form {
+    overflow: auto;
+}
+
+.box-form-add-patient .form button {
+    float: right;
+    color: #fff;
+    font-size: 16px;
+    padding: 12px 35px;
+    border-radius: 50px;
+    display: flex;
+    border: 0;
+    outline: 0;
+    background-image: linear-gradient(135deg, #6C8CBF 10%, #5AA7A7 100%);
+}
+
+.box-form-add-patient .form h5 {
+    font-size: 4vmax;
+    margin-top:20px;
+    margin-bottom: 50px;
+}
+.box-form-add-patient .form h6 {
+    font-size: 1.2vmax;
+    margin-top:10px;
+    margin-bottom: 15px;
+}
+
+.box-form-add-patient .form input {
+    padding: 10px;
+    /*margin-top: 25px;*/
+    /*font-size: 16px;*/
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #B0B3B9;
+    font-size: 1vmax;
+}
+
+@media (max-width: 980px) {
+    .box-form-add-patient {
+        flex-flow: wrap;
+        text-align: center;
+        align-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 980px) {
+    .box-form-add-patient .form {
+        width: 100%;
+    }
 }
