--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -186,7 +186,7 @@ label input[type="checkbox"] {
     left: 50%;
     transform: translate(-50%, -50%);
     /*width: 80%;*/
-    width:fit-content;
+    width: fit-content;
     block-size: fit-content;
     background: #FFFFFF;
     padding: 50px;
@@ -219,12 +219,13 @@ label input[type="checkbox"] {
 
 .box-form-add-patient .form h5 {
     font-size: 4vmax;
-    margin-top:20px;
+    margin-top: 20px;
     margin-bottom: 50px;
 }
+
 .box-form-add-patient .form h6 {
     font-size: 1.2vmax;
-    margin-top:10px;
+    margin-top: 10px;
     margin-bottom: 15px;
 }
 
@@ -251,4 +252,53 @@ label input[type="checkbox"] {
     .box-form-add-patient .form {
         width: 100%;
     }
+}
+
+.card {
+    width: 450px;
+    height: 250px;
+    background-color: #fff;
+    background: linear-gradient(#f8f8f8, #fff);
+    box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.4);
+    border-radius: 6px;
+    /*overflow: hidden;*/
+    position: relative;
+    margin: 1.5rem;
+}
+
+.card h1 {
+    text-align: center;
+}
+
+.card .vitals-signs {
+    font-size: 1rem;
+    display: flex;
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+    right: 1rem;
+    top: auto;
+    color: #333333;
+}
+
+
+.card .vitals-signs > div {
+    flex: 1;
+    text-align: center;
+}
+
+.card .vitals-signs i {
+    display: block;
+}
+
+.card .vitals-signs div.vital-signs-type {
+    font-size: 0.75rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.card .vitals-signs div.value {
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.5rem;
 }
