--- a/src/main/resources/templates/dashboard/reports.html
+++ b/src/main/resources/templates/dashboard/reports.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>HealthMO</title>
@@ -25,22 +25,30 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
     <script>
-        window.setInterval('refresh()', 5000);
-
-        // Refresh or reload page.
-        function refresh() {
-            window .location.reload();
-            console.log("refresh");
-        }
+        $("#generate").on('click', function () {
+            console.log("click");
+            var date = $("#date").getDate();
+            if (name) {
+                window.location = "/dashboard/reports?date=" + date;
+            } else {
+                window.location = "/dashboard/reports";
+            }
+        });
     </script>
 
 </head>
 <body>
 
+<div class="date-selector">
+    <label for="date">Date:</label>
+    <input type="date" id="date" name="date">
+    <input type="button" class="btn" id="generate">Generate</input>
+</div>
+
 <div class="card-holder">
-    <div class="card" th:each="data : ${patients}">
+    <div class="card" th:each="data : ${reports}">
         <div class="name-and-status">
-            <h1 th:text="${data.getName()}">Full name</h1>
+            <h1 th:text="${data.getFullName()}">Full name</h1>
         </div>
         <div class="more-info">
             <span>Age: </span>
@@ -51,26 +59,26 @@
                 <div>
                     <div class="vital-signs-type">PULSE</div>
                     <i class="fa fa-heartbeat"></i>
-                    <div class="value" th:text="${data.getPulseRate()} ?: 'not available' ">89</div>
+                    <div class="value" th:text="${data.getMeanPulseRate()} ?: 'not available' ">89</div>
                 </div>
                 <br>
                 <div>
                     <div class="vital-signs-type">BLOOD PRESSURE</div>
                     <i class="fa fa-heart"></i>
-                    <div class="value" th:text="${data.getBloodPressure()} ?: 'not available'">120/80</div>
+                    <div class="value" th:text="${data.getMeanBloodPressure()} ?: 'not available'">120/80</div>
                 </div>
             </div>
             <div class="vital-signs-right">
                 <div>
                     <div class="vital-signs-type">BODY TEMPERATURE</div>
                     <i class="fa fa-thermometer-three-quarters"></i>
-                    <div class="value" th:text="${data.getBodyTemperature()} ?: 'not available'">37.5</div>
+                    <div class="value" th:text="${data.getMeanBodyTemperature()} ?: 'not available'">37.5</div>
                 </div>
                 <br>
                 <div>
                     <div class="vital-signs-type">OXYGEN IN BLOOD</div>
                     <i class="fa fa-tree"></i>
-                    <div class="value" th:text="${data.getOxygenLevel()} ?: 'not available'">97%</div>
+                    <div class="value" th:text="${data.getMeanOxygenLevel()} ?: 'not available'">97%</div>
                 </div>
             </div>
         </div>
