--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -255,7 +255,7 @@ label input[type="checkbox"] {
 }
 
 .card {
-    width: 450px;
+    width: 350px;
     height: 250px;
     background-color: #fff;
     background: linear-gradient(#f8f8f8, #fff);
@@ -266,7 +266,7 @@ label input[type="checkbox"] {
     margin: 1.5rem;
 }
 
-.card h1 {
+.card h2 {
     text-align: center;
 }
 
@@ -304,5 +304,42 @@ label input[type="checkbox"] {
 }
 
 .card-holder {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr
+}
+
+.date-selector {
+    width: 50%;
+    margin: 0 auto;
+    flex: 1;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.reports_title {
+    text-align: center;
+    font-family: FontAwesome;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.date-selector > button {
+    font-size: 16px;
+    font-family: FontAwesome;
+    padding: 5px 20px;
+    border-radius: 50px;
+    display: inline-block;
+    border: 0;
+    outline: 0;
+    background: #fff;
+}
+
+.no-reports {
+    font-family: FontAwesome;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
 }
