--- a/src/main/resources/templates/addPatientPage/add-patient.html
+++ b/src/main/resources/templates/addPatientPage/add-patient.html
@@ -31,7 +31,7 @@
 <div class="box-form-add-patient">
     <div class="form">
         <h5>Add new patient</h5>
-        <form action="#" method="post" th:action="@{/addPatient}" th:object="${patientForm}">
+        <form action="#" method="post" th:action="@{/add-patient}" th:object="${patientForm}">
             <span class="error" th:if="${param.error}" th:text="${param.error}"></span>
             <div class="inputs">
                 <h6>Patient details</h6>
