--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -181,10 +181,7 @@ label input[type="checkbox"] {
 }
 
 .box-form-add-patient {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: center;
     /*width: 80%;*/
     width: fit-content;
     block-size: fit-content;
@@ -195,6 +192,7 @@ label input[type="checkbox"] {
     display: block;
     align-items: stretch;
     justify-content: space-between;
+    margin: 40px;
 }
 
 .box-form-add-patient div {
@@ -375,4 +373,137 @@ label input[type="checkbox"] {
     font-family: FontAwesome;
     text-align: center;
     display: inline;
+}
+
+.box-form-patient-page {
+    position: center;
+    /*width: 80%;*/
+    width: fit-content;
+    block-size: fit-content;
+    background: #FFFFFF;
+    padding: 50px;
+    border-radius: 10px;
+    overflow: hidden;
+    display: block;
+    align-items: stretch;
+    justify-content: space-between;
+    margin: 40px;
+}
+
+.box-form-patient-page div {
+    height: auto;
+}
+
+.box-form-patient-page .form {
+    overflow: auto;
+}
+
+.box-form-patient-page .form button {
+    float: right;
+    color: #fff;
+    font-size: 16px;
+    padding: 12px 35px;
+    border-radius: 50px;
+    display: flex;
+    border: 0;
+    outline: 0;
+    background-image: linear-gradient(135deg, #6C8CBF 10%, #5AA7A7 100%);
+}
+
+.box-form-patient-page .form h5 {
+    font-size: 4vmax;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.box-form-patient-page .form h6 {
+    font-size: 1.2vmax;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.box-form-patient-page .form input {
+    padding: 10px;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #B0B3B9;
+    font-size: 1vmax;
+}
+
+.available-input {
+    background: #faffdb;
+}
+
+@media (max-width: 980px) {
+    .box-form-patient-page {
+        flex-flow: wrap;
+        text-align: center;
+        align-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 980px) {
+    .box-form-patient-page .form {
+        width: 100%;
+    }
+}
+
+#editButton {
+    float: right;
+    color: #fff;
+    font-size: 16px;
+    padding: 12px 35px;
+    border-radius: 50px;
+    display: flex;
+    border: 0;
+    outline: 0;
+    background-image: linear-gradient(135deg, #6C8CBF 10%, #5AA7A7 100%);
+}
+
+#cancelButton {
+    float: left;
+    color: #fff;
+    font-size: 16px;
+    padding: 12px 35px;
+    border-radius: 50px;
+    display: flex;
+    border: 0;
+    outline: 0;
+    background-image: linear-gradient(135deg, #6C8CBF 10%, #5AA7A7 100%);
+}
+
+.vital-signs-details {
+    font-size: 1.2vmax;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.vital-signs-details .vs-type {
+    text-align: center;
+}
+
+.availability {
+    font-size: 1vmax;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.table {
+    text-align: center;
+    font-size: 1vmax;
+}
+
+table, td, th {
+    border: 1px solid;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.table-div {
+    text-align: center;
+    font-size: 1.2vmax;
 }
