--- a/src/main/resources/templates/dashboard/patientpage.html
+++ b/src/main/resources/templates/dashboard/patientpage.html
@@ -5,7 +5,6 @@
     <title>HealthMO</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}">
     <link href="http://fonts.googleapis.com/css?family=Lato"
           rel="stylesheet" type="text/css"/>
     <link href="http://fonts.googleapis.com/css?family=Montserrat"
@@ -14,8 +13,7 @@
             href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
             th:href="@{/webjars/bootstrap/3.3.4/css/bootstrap.min.css}"
             rel="stylesheet" media="screen"/>
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/3.6.0/jquery.min.js"
-            th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <script src="../static/js/bootstrap.min.js"
             th:src="@{~/js/bootstrap.min.js}"></script>
@@ -23,13 +21,177 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css"/>
+    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}">
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#saveButton").hide();
+            $("#cancelButton").hide();
+            disableInputs();
+
+            let intervalId = window.setInterval(' window.location.reload();', 5000);
+
+
+            $("#editButton").click(function () {
+                window.clearInterval(intervalId);
+                $("#patientHomeAddress").prop('readonly', false).addClass("available-input");
+                $("#patientPhoneNumber").prop('readonly', false).addClass("available-input");
+                $("#patientEmail").prop('readonly', false).addClass("available-input");
+                $("#deviceIMEI").prop('readonly', false).addClass("available-input");
+                $("#deviceBrand").prop('readonly', false).addClass("available-input");
+                $("#deviceModel").prop('readonly', false).addClass("available-input");
+                $("#diseases").prop('readonly', false).addClass("available-input");
+                $("#treatments").prop('readonly', false).addClass("available-input");
+                $("#otherDetails").prop('readonly', false).addClass("available-input");
+                $("#emergencyContactFullName").prop('readonly', false).addClass("available-input");
+                $("#emergencyContactPhoneNumber").prop('readonly', false).addClass("available-input");
+                $("#emergencyContactRelationship").prop('readonly', false).addClass("available-input");
+                $("#saveButton").show();
+                $("#cancelButton").show();
+                $(this).hide();
+            });
+
+            $("#cancelButton").click(function () {
+                var choice = confirm("Are you sure you want to cancel this? All changes will be lost.");
+                if (choice) {
+                    window.location.reload();
+                }
+            });
+
+
+            function disableInputs() {
+                $("input").prop('readonly', true);
+            }
+        })
+    </script>
 </head>
 <body>
 <div class="box-form-patient-page">
-    <div class="current-data">
-
+    <div class="form">
+        <h5>Patient Details</h5>
+        <form id="from" action="#" method="post" th:action="@{/edit-patient}" th:object="${details}">
+            <span class="error" th:if="${param.error}" th:text="${param.error}"></span>
+            <div class="inputs">
+                <h6>Patient details</h6>
+                <input id="patientFullName" name="patientFullName" th:required="required"
+                       th:value="${details.getPatientFullName()}"
+                       type="text"
+                       placeholder="Full name*">
+                <input id="patientEmail" name="patientEmail" th:required="required"
+                       th:value="${details.getPatientEmail()}"
+                       type="email"
+                       placeholder="Email*">
+                <input id="patientPhoneNumber" name="patientPhoneNumber" th:required="required"
+                       th:value="${details.getPatientPhoneNumber()}" type="text"
+                       placeholder="Phone number*">
+                <input id="patientCNP" name="patientCNP" th:required="required" th:value="${details.getPatientCNP()}"
+                       type="text"
+                       placeholder="CNP*">
+                <input id="patientBirthDate" name="patientBirthDate" th:required="required"
+                       th:value="${details.getPatientBirthDate()}" type="date"
+                       placeholder="Date of birth*">
+                <input id="patientAge" name="patientAge" th:required="required"
+                       th:value="${details.getPatientAge()}" type="text"
+                       placeholder="Age*">
+                <input id="patientHomeAddress" name="patientHomeAddress" th:required="required"
+                       th:value="${details.getPatientHomeAddress()}" type="text"
+                       placeholder="Home address*">
+                <h6>Device details</h6>
+                <input id="deviceIMEI" name="deviceIMEI" th:required="required" th:value="${details.getDeviceImei()}"
+                       type="text"
+                       placeholder="IMEI*">
+                <input id="deviceBrand" name="deviceBrand" th:required="required" th:value="${details.getDeviceBrand()}"
+                       type="text"
+                       placeholder="Brand*">
+                <input id="deviceModel" name="deviceModel" th:required="required" th:value="${details.getDeviceModel()}"
+                       type="text"
+                       placeholder="Model*">
+                <h6>Medical record</h6>
+                <input id="diseases" name="diseases" th:value="${details.getDiseases()}" type="text"
+                       placeholder="Diseases">
+                <input id="treatments" name="treatments" th:value="${details.getTreatments()}" type="text"
+                       placeholder="Treatments">
+                <input id="otherDetails" name="otherDetails" th:value="${details.getOtherDetails()}" type="text"
+                       placeholder="Other details">
+                <h6>Emergency contact</h6>
+                <input id="emergencyContactFullName" name="emergencyContactFullName" th:required="required"
+                       th:value="${details.getEmergencyContactFullName()}" type="text"
+                       placeholder="Full name*">
+                <input id="emergencyContactPhoneNumber" name="emergencyContactPhoneNumber" th:required="required"
+                       th:value="${details.getEmergencyContactPhoneNumber()}" type="text"
+                       placeholder="Phone number*">
+                <input id="emergencyContactRelationship" name="emergencyContactRelationship"
+                       th:value="${details.getEmergencyContactRelationship()}" type="text"
+                       placeholder="Relationship">
+            </div>
+            <br>
+            <span class="error" th:if="${param.error}" th:text="${param.error}"></span>
+            <br>
+            <br>
+            <button id="saveButton" type="submit">SAVE</button>
+        </form>
+        <div>
+            <button id="editButton">EDIT</button>
+            <button id="cancelButton">CANCEL</button>
+        </div>
+        <br>
+        <br>
+        <br>
+        <hr>
+        <div class="availability">
+            <span th:if="${details.getIsOnline()}" id="isOnline">Online</span>
+            <span th:unless="${details.getIsOnline()}" id="lastSeen">Last seen at [[${#temporals.format(details.getLastSeen(), 'dd-MM-yyyy HH:mm')}]]</span>
+        </div>
+        <br>
+        <div class="vital-signs-details">
+            <div class="vs-type">
+                <i class="fa fa-heartbeat"></i>
+                <div>PULSE</div>
+                <div th:text="${details.getPulseRate()} ?: 'not available' ">89</div>
+            </div>
+            <div class="vs-type">
+                <i class="fa fa-heart"></i>
+                <div>BLOOD PRESSURE</div>
+                <div th:text="${details.getBloodPressure()} ?: 'not available'">120/80</div>
+            </div>
+            <div class="vs-type">
+                <i class="fa fa-thermometer-three-quarters"></i>
+                <div>BODY TEMPERATURE</div>
+                <div th:text="${details.getBodyTemperature()} ?: 'not available'">37.5</div>
+            </div>
+            <div class="vs-type">
+                <i class="fa fa-tree"></i>
+                <div>OXYGEN IN BLOOD</div>
+                <div th:text="${details.getOxygenLevel()} ?: 'not available'">97%</div>
+            </div>
+        </div>
+        <hr>
+        <div class = "table-div">
+            Patient vital signs in the last 20 minutes:
+            <br>
+            <br>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Type</th>
+                    <th>Value</th>
+                    <th>Received at</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:if="${details.getRecentData().empty}">
+                    <td colspan="3"> No data available.</td>
+                </tr>
+                <tr th:each="data:${details.getRecentData()}">
+                    <td th:text="${data.getVitalSignType()}"></td>
+                    <td th:text="${data.getData()}"></td>
+                    <td>[[${#temporals.format(data.getCreatedAt(), 'dd-MM-yyyy HH:mm')}]]</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
+
 </div>
 </body>
 </html>
