--- a/src/main/resources/templates/dashboard/patientpage.html
+++ b/src/main/resources/templates/dashboard/patientpage.html
@@ -25,8 +25,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
     <script>
         $(document).ready(function () {
-            $("#saveButton").hide();
-            $("#cancelButton").hide();
+            // $("#saveButton").hide();
+            // $("#cancelButton").hide();
             disableInputs();
 
             let intervalId = window.setInterval(' window.location.reload();', 5000);
@@ -46,8 +46,8 @@
                 $("#emergencyContactFullName").prop('readonly', false).addClass("available-input");
                 $("#emergencyContactPhoneNumber").prop('readonly', false).addClass("available-input");
                 $("#emergencyContactRelationship").prop('readonly', false).addClass("available-input");
-                $("#saveButton").show();
-                $("#cancelButton").show();
+                $("#saveButton").removeAttr("style");
+                $("#cancelButton").removeAttr("style");
                 $(this).hide();
             });
 
@@ -73,6 +73,10 @@
             <span class="error" th:if="${param.error}" th:text="${param.error}"></span>
             <div class="inputs">
                 <h6>Patient details</h6>
+                <input id="patientId" name="patientId" th:required="required"
+                       th:value="${details.getPatientId()}"
+                       type="text"
+                       style="display: none">
                 <input id="patientFullName" name="patientFullName" th:required="required"
                        th:value="${details.getPatientFullName()}"
                        type="text"
@@ -97,6 +101,10 @@
                        th:value="${details.getPatientHomeAddress()}" type="text"
                        placeholder="Home address*">
                 <h6>Device details</h6>
+                <input id="deviceId" name="deviceId" th:required="required"
+                       th:value="${details.getDeviceId()}"
+                       type="text"
+                       style="display: none">
                 <input id="deviceIMEI" name="deviceIMEI" th:required="required" th:value="${details.getDeviceImei()}"
                        type="text"
                        placeholder="IMEI*">
@@ -128,11 +136,11 @@
             <span class="error" th:if="${param.error}" th:text="${param.error}"></span>
             <br>
             <br>
-            <button id="saveButton" type="submit">SAVE</button>
+            <button id="saveButton" type="submit" style="display: none">SAVE</button>
         </form>
         <div>
             <button id="editButton">EDIT</button>
-            <button id="cancelButton">CANCEL</button>
+            <button id="cancelButton" style="display: none">CANCEL</button>
         </div>
         <br>
         <br>
