--- a/src/main/resources/templates/dashboard/patientpage.html
+++ b/src/main/resources/templates/dashboard/patientpage.html
@@ -49,6 +49,7 @@
                 $("#saveButton").removeAttr("style");
                 $("#cancelButton").removeAttr("style");
                 $(this).hide();
+                $("#deleteButton").hide();
             });
 
             $("#cancelButton").click(function () {
@@ -92,7 +93,7 @@
                        type="text"
                        placeholder="CNP*">
                 <input id="patientBirthDate" name="patientBirthDate" th:required="required"
-                       th:value="${details.getPatientBirthDate()}" type="date"
+                       th:value="${details.getPatientBirthDate()}" type="text"
                        placeholder="Date of birth*">
                 <input id="patientAge" name="patientAge" th:required="required"
                        th:value="${details.getPatientAge()}" type="text"
@@ -141,6 +142,9 @@
         <div>
             <button id="editButton">EDIT</button>
             <button id="cancelButton" style="display: none">CANCEL</button>
+            <form method="post" th:action="@{/delete-patient/{id}(id=${details.getPatientId()})}" onSubmit="return confirm('Do you want to delete this patient?') ">
+                <button type="submit" name = "submit" id="deleteButton">DELETE</button>
+            </form>
         </div>
         <br>
         <br>
