--- a/src/main/resources/templates/dashboard/patientpage.html
+++ b/src/main/resources/templates/dashboard/patientpage.html
@@ -67,6 +67,7 @@
     </script>
 </head>
 <body>
+<div th:include="fragments/header :: header" class="topnav"></div>
 <div class="box-form-patient-page">
     <div class="form">
         <h5>Patient Details</h5>
