--- a/src/main/resources/templates/dashboard/reports.html
+++ b/src/main/resources/templates/dashboard/reports.html
@@ -29,7 +29,7 @@
 
 </head>
 <body>
-
+<div th:include="fragments/header :: header" class="topnav"></div>
 <h1 class="reports_title">Reports for [[${report_date}]]</h1>
 
 <div class="date-selector">
