--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,6 +6,8 @@ body {
     background-attachment: fixed;
     font-family: "Open Sans", sans-serif;
     color: #333333;
+    margin: 0;
+    height: available;
 }
 
 .box-form {
@@ -140,7 +142,6 @@ label {
 label::before {
     content: ' \f00c';
     position: absolute;
-    font-family: FontAwesome;
     background: transparent;
     border: 3px solid #00dea7;
     border-radius: 4px;
@@ -150,7 +151,6 @@ label::before {
 }
 
 label:hover::before {
-    font-family: FontAwesome;
     content: ' \f00c';
     color: #fff;
     cursor: pointer;
@@ -158,7 +158,6 @@ label:hover::before {
 }
 
 .error {
-    font-family: FontAwesome;
     color: dimgray;
     font-size: 15px;
     padding-left: 12px;
@@ -265,6 +264,7 @@ label input[type="checkbox"] {
 
 .card h2 {
     text-align: center;
+    font-size: 20px;
 }
 
 .card .name-and-status-dashboard-card {
@@ -339,7 +339,6 @@ label input[type="checkbox"] {
 
 .reports_title {
     text-align: center;
-    font-family: FontAwesome;
     width: 50%;
     margin: 0 auto;
     margin-top: 20px;
@@ -347,7 +346,6 @@ label input[type="checkbox"] {
 
 .date-selector > button {
     font-size: 16px;
-    font-family: FontAwesome;
     padding: 5px 20px;
     border-radius: 50px;
     display: inline-block;
@@ -357,20 +355,17 @@ label input[type="checkbox"] {
 }
 
 .no-reports {
-    font-family: FontAwesome;
     text-align: center;
     width: 50%;
     margin: 0 auto;
 }
 
 .card .name-and-status-dashboard-card .name-and-status-left {
-    font-family: FontAwesome;
     text-align: center;
     display: inline;
 }
 
 .card .name-and-status-dashboard-card .name-and-status-right {
-    font-family: FontAwesome;
     text-align: center;
     display: inline;
 }
@@ -523,4 +518,37 @@ table {
 .alerts {
     text-align: center;
     font-size: 1.2vmax;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #5AA7A7;
+    align-self: flex-start;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #96D7C6;
+    color: black;
+}
+
+.topnav p {
+    float: right;
+    text-align: center;
+    padding: 11px 20px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #f2f2f2;
+    margin: 0;
 }
