Add profile and about page

--- a/src/main/resources/templates/addPatientPage/add-patient.html
+++ b/src/main/resources/templates/addPatientPage/add-patient.html
@@ -27,7 +27,7 @@
 
 </head>
 <body>
-
+<div th:include="fragments/header :: header" class="topnav"></div>
 <div class="box-form-add-patient">
     <div class="form">
         <h5>Add new patient</h5>
