--- a/src/main/resources/templates/supervisor/supervisorprofile.html
+++ b/src/main/resources/templates/supervisor/supervisorprofile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>HealthMO</title>
@@ -24,16 +24,33 @@
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+
 </head>
 <body>
-<div th:fragment="header">
-        <a th:href="@{/dashboard}">Home</a>
-        <a th:href="@{/dashboard/reports}">Reports</a>
-        <a th:href="@{/profile}">My profile</a>
-        <a th:href="@{/add-patient}">Add a patient</a>
-        <a th:href="@{/about}">About</a>
-        <p>HealthMO</p>
-</div>
+<div th:include="fragments/header :: header" class="topnav"></div>
+<div class="box-supervisor-page">
+    <div class="form">
+        <h5>My profile</h5>
+        <form class="supervisor-details">
+            <input id="supervisorFullName" name="supervisorFullName" th:required="required"
+                   th:value="${supervisor.getFullName()}"
+                   type="text"
+                   placeholder="Full name" readonly>
+            <input id="supervisorEmail" name="supervisorEmail" th:required="required"
+                   th:value="${supervisor.getEmail()}"
+                   type="text"
+                   placeholder="Email" readonly>
+            <input id="supervisorTitle" name="supervisorTitle" th:required="required"
+                   th:value="${supervisor.getTitle()}"
+                   type="text"
+                   placeholder="Title" readonly>
+        </form>
+    </div>
+    <h6>
+        Please note that this is an institutional page. For any changes, please contact the admin.
+    </h6>
 
 </body>
 </html>
