--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,10 +11,7 @@ body {
 }
 
 .box-form {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    margin: 50px auto;
     width: 80%;
     background: #FFFFFF;
     border-radius: 10px;
@@ -289,6 +286,7 @@ label input[type="checkbox"] {
 .card .name-and-status-left #age {
     margin: 0 auto;
 }
+
 .card .vitals-signs {
     font-size: 1rem;
     display: flex;
